# serializer version: 1
# name: test_device_tracker_empty[zoe_50][device_tracker.reg_number_location-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.reg_number_location',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Location',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'location',
    'unique_id': 'vf1zoe50vin_location',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_tracker_empty[zoe_50][device_tracker.reg_number_location-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Location',
      'source_type': <SourceType.GPS: 'gps'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.reg_number_location',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_device_tracker_errors[zoe_50][device_tracker.reg_number_location-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.reg_number_location',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Location',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'location',
    'unique_id': 'vf1zoe50vin_location',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_tracker_errors[zoe_50][device_tracker.reg_number_location-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Location',
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.reg_number_location',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_device_trackers[captur_fuel][device_tracker.reg_number_location-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.reg_number_location',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Location',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'location',
    'unique_id': 'vf1capturfuelvin_location',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_trackers[captur_fuel][device_tracker.reg_number_location-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Location',
      'gps_accuracy': 0,
      'latitude': 48.1234567,
      'longitude': 11.1234567,
      'source_type': <SourceType.GPS: 'gps'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.reg_number_location',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_home',
  })
# ---
# name: test_device_trackers[captur_phev][device_tracker.reg_number_location-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.reg_number_location',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Location',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'location',
    'unique_id': 'vf1capturphevvin_location',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_trackers[captur_phev][device_tracker.reg_number_location-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Location',
      'gps_accuracy': 0,
      'latitude': 48.1234567,
      'longitude': 11.1234567,
      'source_type': <SourceType.GPS: 'gps'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.reg_number_location',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_home',
  })
# ---
# name: test_device_trackers[twingo_3_electric][device_tracker.reg_number_location-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.reg_number_location',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Location',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'location',
    'unique_id': 'vf1twingoiiivin_location',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_trackers[twingo_3_electric][device_tracker.reg_number_location-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Location',
      'gps_accuracy': 0,
      'latitude': 48.1234567,
      'longitude': 11.1234567,
      'source_type': <SourceType.GPS: 'gps'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.reg_number_location',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_home',
  })
# ---
# name: test_device_trackers[zoe_50][device_tracker.reg_number_location-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.reg_number_location',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Location',
    'platform': 'renault',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'location',
    'unique_id': 'vf1zoe50vin_location',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_trackers[zoe_50][device_tracker.reg_number_location-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'REG-NUMBER Location',
      'gps_accuracy': 0,
      'latitude': 48.1234567,
      'longitude': 11.1234567,
      'source_type': <SourceType.GPS: 'gps'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.reg_number_location',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_home',
  })
# ---
